[workspace]
members = [
    "anychain-core",
    "anychain-bitcoin",
    "anychain-bitcoincash",
    "anychain-ethereum",
    "anychain-tron",
    "anychain-filecoin",
    "anychain-polkadot",
]

[workspace.package]
authors = ["Shawndslee", "cregis.com"]
edition = "2021"
homepage = "https://www.cregis.com"
license = "MIT/Apache-2.0"
repository = "https://github.com/0xcregis/anychain"

[profile.release]
debug = true
lto = true
codegen-units = 1
