[workspace]
members = [
    "anychain-core",
    "anychain-bitcoin",
    "anychain-ethereum",
    "anychain-tron",
    "anychain-filecoin",
    "anychain-polkadot",
]

[workspace.package]
authors = ["Shawndslee", "cregis.com"]
edition = "2021"
homepage = "https://www.cregis.com"
license = "MIT/Apache-2.0"
repository = "https://github.com/0xcregis/anychain"

[workspace.dependencies]
sha3 = "0.10.1"
thiserror = "1.0"
ethereum-types = "0.13.1"
ripemd = "0.1.1"
blake2b_simd = "1.0.0"
bech32 = "0.9.0"
hex = "0.4.2"
libsecp256k1 = "0.7.1"
bls-signatures = "0.13.0"
base58 = { version = "0.2" }
rand = { version = "0.8.5", default-features = false }
rand_core = { version = "0.6.3", default-features = false }
rlp = { version = "0.5.1", default-features = false }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
sha2 = { version = "0.10.2", default-features = false }
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
fvm_shared = "0.8.0"
data-encoding = "2.3.2"
data-encoding-macro = "0.1.12"
fvm_ipld_encoding = "0.2.2"
num-derive = "0.3.3"
num-traits = "0.2.15"
lazy_static = "1.4.0"
unsigned-varint = "0.7.1"
num-bigint = "0.4.3"
anyhow = "1.0.65"
forest_encoding = "0.2.2"
cid = "0.8.6"
base64 = "0.13.0"
bytes = "1.0"
protobuf = { version = "3.1.0" }
chrono = "0.4"
ethabi = "17.2.0"
regex = { version = "1.3" }

[profile.release]
debug = true
lto = true
codegen-units = 1
