[package]
name = "anychain-bitcoin"
description = "A Rust library for Bitcoin-focused cryptocurrency wallets, enabling seamless transactions on the Bitcoin blockchain"
authors = ["Shawndslee", "cregis.com"]
version = "0.1.0"
license = "MIT"
homepage = "https://www.cregis.com/"
repository = "https://github.com/0xcregis/anychain"
keywords = ["bitcoin", "blockchain", "cryptocurrency", "wallet", "transactions"]
edition = "2021"

[dependencies]
anychain-core = { path = "../anychain-core", version = "0.0.1"}
base58 = { version = "0.2" }
bech32 = { version = "0.9.0" }
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
sha2 = { version = "0.10.2", default-features = false }
rand = { version = "0.8.5"}
thiserror = "1.0"

[features]
default = ["std"]
std = ["anychain-core/std"]
