[package]
name = "anychain-bitcoincash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anychain-core = { path = "../anychain-core", version = "0.0.1" }
anychain-bitcoin = { path = "../anychain-bitcoin", version = "0.1.0" }
thiserror = "1.0"
bech32 = "0.9.0"
base58 = "0.2.0"
