[package]
name = "anychain-bitcoincash"
description = "A Rust library for Bitcoin Cash-focused cryptocurrency wallets, enabling seamless transactions on the Bitcoin Cash blockchain"
version = "0.1.0"
keywords = ["bitcoincash", "blockchain", "cryptocurrency", "wallet", "transactions"]

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anychain-core = { path = "../anychain-core", version = "0.0.1" }
anychain-bitcoin = { path = "../anychain-bitcoin", version = "0.1.0" }
thiserror = { workspace = true }
bech32 = { workspace = true }
base58 = { workspace = true }
