[package]
name = "anychain-core"
version = "0.1.3"
description = "A core support for cryptocurrency wallets"
categories = ["command-line-utilities", "cryptocurrency"]
keywords = ["bitcoin", "blockchain", "ethereum", "no_std"]
readme = "README.md"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
sha3 = { workspace = true }
thiserror = { workspace = true }
ethereum-types = { workspace = true }
ripemd = { workspace = true }
blake2b_simd = { workspace = true }
bech32 = { workspace = true }
hex = { workspace = true }
libsecp256k1 = { workspace = true }
bls-signatures = { workspace = true }
base58 = { workspace = true , optional = true }
rand = { workspace = true }
rand_core = { workspace = true }
rlp = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }

[features]
default = ["std"]
std = ["base58"]