[package]
name = "anychain-ethereum"
description = "A Rust library for Ethereum-focused cryptocurrency wallets, enabling seamless transactions on the Ethereum blockchain"
version = "0.1.2"
keywords = ["blockchain", "crypto", "cryptocurrency", "ethereum", "wallet"]

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
anychain-core = { path = "../anychain-core", version = "0.1.1"}
rand = { workspace = true }
regex = { workspace = true }
rlp = { workspace = true }
serde = { workspace = true }
ethabi = { workspace = true }

[features]
default = ["std"]
std = ["anychain-core/std"]
