[package]
name = "anychain-filecoin"
description = "A Rust library for Filecoin-focused cryptocurrency wallets, enabling seamless transactions on the Filecoin blockchain"
version = "0.1.2"
keywords = ["filecoin", "blockchain", "cryptocurrency", "wallet", "transactions"]

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anychain-core = { path = "../anychain-core", version = "0.1.1" }
serde = { workspace = true }
rand = { workspace = true }
serde_json = { workspace = true }
fvm_shared = { workspace = true }
data-encoding = { workspace = true }
data-encoding-macro = { workspace = true }
fvm_ipld_encoding = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }
thiserror = { workspace = true }
lazy_static = { workspace = true }
unsigned-varint = { workspace = true }
blake2b_simd = { workspace = true }
num-bigint = { workspace = true }
anyhow = { workspace = true }
forest_encoding = { workspace = true }
cid = { workspace = true }
base64 = { workspace = true }
