[package]
name = "anychain-mina"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anychain-core = { path = "../anychain-core", version = "0.1.2"}
ark-ec = { version = "0.3.0", features = ["parallel"] }
ark-ff = { version = "0.3.0", features = ["parallel", "asm"] }
ark-poly = { version = "0.3.0", features = [ "parallel" ] }
ark-serialize = "0.3.0"
bcs = "0.1.3"
rayon = "1.3.0"
serde = "1.0.130"
serde_with = "1.10.0"
hex = { version = "0.4", features = ["serde"] }
num-bigint = { version = "0.4.3", features = ["rand"]}
num-integer = "0.1.45"
num-traits = "0.2"
sha2 = "0.10.2"
thiserror = "1.0.30"
rand = "0.8.0"
rand_core = "0.6.3"
blake2 = "0.10.0"
bitvec = "1.0.0"
bs58 = "0.4.0"
once_cell = "1.10.0"
ocaml = { version = "0.22.2", optional = true }
ocaml-gen = { version = "0.1.5", optional = true }
serde_json = { workspace = true }