[package]
name = "anychain-polkadot"
description = "A Rust library for Polkadot cryptocurrency wallets, enabling seamless transactions on the Polkadot blockchain"
version = "0.1.0"
keywords = ["polkadot", "blockchain", "cryptocurrency", "wallet", "transactions"]

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
anychain-core = { path = "../anychain-core", version = "0.1.1" }
sp-core = "24.0.0"
base58 = { workspace = true }
parity-scale-codec = { version = "3.6.5" }
ed25519-dalek-fiat = "0.1.0"
serde_json = { workspace = true }
rand.workspace = true
