[package]
name = "anychain-polkadot"
description = "A Rust library for Polkadot cryptocurrency wallets, enabling seamless transactions on the Polkadot blockchain"
version = "0.1.2"
keywords = ["polkadot", "blockchain", "cryptography::cryptocurrencies", "wallet", "transactions"]

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
anychain-core = { path = "../anychain-core", version = "0.1.4" }
sp-core = "30.0.0"
base58 = { workspace = true }
parity-scale-codec = { version = "3.6.5" }
ed25519-dalek = "2.1.1"
serde_json = { workspace = true }
libsecp256k1 = { workspace = true }
blake2b_simd = { workspace = true }