[package]
name = "anychain-solana"
description = "A Rust library for Solana-focused cryptocurrency wallets, enabling seamless transactions on the Solana blockchain"
version = "0.1.0"
keywords = ["solana", "blockchain", "cryptocurrency", "wallet", "transactions"]

# Workspace inherited keys
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true


[dependencies]
anychain-core = { path = "../anychain-core", version = "0.1.4" }
serde = { workspace = true }
ed25519-dalek = "2.1.1"
bs58 = { workspace = true }