[package]
name = "anychain-solana"
description = "A Rust library for Solana-focused cryptocurrency wallets, enabling seamless transactions on the Solana blockchain"
version = "0.1.0"
keywords = ["solana", "blockchain", "cryptocurrency", "wallet", "transactions"]

# Workspace inherited keys
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true


[dependencies]
anychain-core = { path = "../anychain-core", version = "0.1.5" }
ed25519-dalek = { version = "=1.0.1" }
serde = { workspace = true }
bs58 = { workspace = true }