[package]
name = "chainlib-core"
version = "0.0.1"
authors = [
    "shawn"
]
description = "A core support for cryptocurrency wallets"
categories = ["command-line-utilities", "cryptocurrency"]
keywords = ["bitcoin", "blockchain", "cryptocurrency", "ethereum", "no_std"]
readme = "README.md"
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
base58 = { version = "0.2", optional = true }
bech32 = { version = "0.9.0" }
hex = { version = "0.4.2" }
libsecp256k1 = { version = "0.7.1" }
bls-signatures = { version = "0.13.0" }
rand = { version = "0.8.5", default-features = false }
rand_core = { version = "0.6.3", default-features = false }
rlp = { version = "0.5.1", default-features = false }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
sha2 = { version = "0.10.2", default-features = false }
sha3 = "0.10.1"
thiserror = "1.0"
ethereum-types = "0.13.1"
ripemd = "0.1.1"
blake2b_simd = "1.0.0"

[features]
default = ["std"]
std = ["base58"]


