[package]
name = "filecoin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chainlib-core = { path = "../core", version = "0.0.1" }
serde = { version = "1.0", default-features = false, features = ["derive"] }
rand = { version = "0.8.5", default-features = false }
serde_json = "1.0.87"
fvm_shared = "0.8.0"
data-encoding = "2.3.2"
data-encoding-macro = "0.1.12"
fvm_ipld_encoding = "0.2.2"
num-derive = "0.3.3"
num-traits = "0.2.15"
thiserror = "1.0.37"
lazy_static = "1.4.0"
unsigned-varint = "0.7.1"
blake2b_simd = "1.0.0"
num-bigint = "0.4.3"
anyhow = "1.0.65"
forest_encoding = "0.2.2"
forest_crypto = "0.5.3"
cid = "0.8.6"
base64 = "0.13.0"