[package]
name = "tron"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chainlib-core = { path = "../core", version = "0.0.1" }
serde = { version = "1.0", default-features = false, features = ["derive"] }
sha3 = "0.10.1"
sha2 = "0.10"
hex = "0.4"
rand = { version = "0.8.5", default-features = false }
base58 = "0.2"
bytes = "1.0"
protobuf = { version = "3.1.0" }
thiserror = "1.0"
chrono = "0.4"
ethabi = "17.2.0"