[package]
name = "anychain-cardano"
description = "A Rust library for Cardano-focused cryptocurrency wallets, enabling seamless transactions on the Solana blockchain"
version = "0.1.0"
keywords = ["cardano", "ada", "blockchain", "wallet", "transactions"]
categories = ["cryptography::cryptocurrencies"]

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[[example]]
name = "transfer-ada"
path = "examples/transfer-ada.rs"

[dependencies]
anychain-core = { path = "../anychain-core", version = "0.1.7" }
serde = { workspace = true }
# Cardano specific depends
cml-chain = { workspace = true }
cml-crypto = { workspace = true }
cml-core = { workspace = true }

[dev-dependencies]
hex = "0.4.3"
bip39 = "2.1.0"
blockfrost = "1.0.5"
tokio = { version = "1.0", features = ["full"] }

[features]
default = ["std"]
std = ["anychain-core/std"]