[package]
name = "anychain-ethereum"
description = "A Rust library for Ethereum-focused cryptocurrency wallets, enabling seamless transactions on the Ethereum blockchain"
version = "0.1.35"
keywords = ["blockchain", "crypto", "ethereum", "wallet"]
categories = ["cryptography::cryptocurrencies"]

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
anychain-core = { path = "../anychain-core", version = "0.1.8" }
anychain-kms = { path = "../anychain-kms", version = "0.1.18" }
regex = { workspace = true }
rlp = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ethabi = { workspace = true }
libsecp256k1 = { workspace = true }
ethereum-types = { workspace = true }
rand.workspace = true

[features]
default = ["std"]
std = ["anychain-core/std"]

[lints]
workspace = true
