[package]
name = "anychain-kms"
description = "A Rust library providing Key Management Schema for AnyChain. Handles general security and signature algorithms."
version = "0.1.21"
keywords = ["cryptography", "security", "signature", "algorithm"]
categories = ["cryptography::cryptocurrencies"]

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
rustc-hash = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
bs58 = { workspace = true }
pbkdf2 = { workspace = true }
unicode-normalization = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
zeroize = { workspace = true }
once_cell = { workspace = true }
subtle = { workspace = true }
ripemd = { workspace = true }
hex = { workspace = true }
libsecp256k1 = { workspace = true }
ed25519-dalek = { workspace = true }
curve25519-dalek = { workspace = true }
group = "0.13.0"
encoding = "0.2.33"
anychain-core = { version = "0.1.8", path = "../anychain-core" }

[dev-dependencies]
hex-literal = "0.4"

[features]
alloc = ["zeroize/alloc"]
std = ["alloc"]
chinese-simplified = []
chinese-traditional = []
# Note: English is the standard for bip39 so always included
french = []
italian = []
japanese = []
korean = []
spanish = []
default = ["std", "chinese-simplified", "chinese-traditional", "french", "italian", "japanese", "korean", "spanish"]

[lints]
workspace = true