[package]
name = "anychain-polkadot"
description = "A Rust library for Polkadot cryptocurrency wallets, enabling seamless transactions on the Polkadot blockchain"
version = "0.1.7"
keywords = ["polkadot", "blockchain", "wallet", "transactions"]
categories = ["cryptography::cryptocurrencies"]

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
anychain-core = { path = "../anychain-core", version = "0.1.8" }
sp-core = "38.1.0"
base58 = { workspace = true }
parity-scale-codec = { version = "3.6.5" }
ed25519-dalek = { workspace = true }
serde_json = { workspace = true }
libsecp256k1 = { workspace = true }
blake2b_simd = { workspace = true }
sha2 = {workspace = true}

[dev-dependencies]
curve25519-dalek = {workspace = true}
anychain-kms = { path = "../anychain-kms", version = "0.1.20" }

[lints]
workspace = true