[package]
name = "anychain-bitcoin-cli"
version = "0.1.0"
edition = "2021"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anychain-core = { path = "../../anychain-core" }
anychain-bitcoin = { path = "../../anychain-bitcoin" }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
libsecp256k1 = { workspace = true }