[package]
name = "anychain-bitcoin-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anychain-core = { path = "../../crates/anychain-core" }
anychain-bitcoin = { path = "../../crates/anychain-bitcoin" }
libsecp256k1 = { workspace = true }