[package]
name = "anychain-ethereum-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anychain-core = { path = "../../anychain-core", version = "0.1.1" }
anychain-ethereum = { path = "../../anychain-ethereum", version = "0.1.1" }
clap = { workspace = true }
rlp = { workspace = true }
primitive-types = { workspace = true }
